Bug 466045 - Intermittent failure of video seek mochitests; r=chris.double sr=roc